@@ -73,7 +73,7 @@
 /* Note that normally this VID is handled by Liebert/Phoenixtec HID mapping,
  * here it is just for for AEG PROTECT NAS devices: */
 /* Phoenixtec Power Co., Ltd */
-#define PHOENIXTEC		0x06da
+#define PHOENIXTEC_VENDORID	0x06da
 
 /* IBM */
 #define IBM_VENDORID		0x04b3
@@ -106,7 +106,7 @@ static usb_device_id_t mge_usb_device_table[] = {
 
 	/* PROTECT B / NAS */
 	{ USB_DEVICE(AEG_VENDORID, 0xffff), NULL },
-	{ USB_DEVICE(PHOENIXTEC, 0xffff), NULL },
+	{ USB_DEVICE(PHOENIXTEC_VENDORID, 0xffff), NULL },
 
 	/* 6000 VA LCD 4U Rack UPS; 5396-1Kx */
 	{ USB_DEVICE(IBM_VENDORID, 0x0001), NULL },
@@ -2465,7 +2465,7 @@ static int mge_claim(HIDDevice_t *hd) {
 				 */
 				return 0;
 
-			case PHOENIXTEC:
+			case PHOENIXTEC_VENDORID:
 				/* The vendorid 0x06da is primarily handled by
 				 * liebert-hid, except for (maybe) AEG PROTECT NAS
 				 * branded devices */
@@ -2501,7 +2501,7 @@ static int mge_claim(HIDDevice_t *hd) {
 
 		switch (hd->VendorID)
 		{
-			case PHOENIXTEC: /* see comments above */
+			case PHOENIXTEC_VENDORID: /* see comments above */
 				if (hd->Vendor && strstr(hd->Vendor, "AEG")) {
 					return 1;
 				}
