@@ -229,6 +229,10 @@ several `FSD` notifications into one executed action. [PR #3097]
  - The `configure` script should now try harder to report specifically
    the "purelib" location as `PYTHON*_SITE_PACKAGES`. [#1209]
 
+ - Revised use of NUT macros for USB Vendor IDs listed in different drivers,
+   so the names would be better exposed in generated `udev.rules` and similar
+   files. [PR #3139]
+
 
 Release notes for NUT 2.8.4 - what's new since 2.8.3
 ----------------------------------------------------
